added a keyboard (only visual rn)

--- a/frontend/themes/mytheme/styles.css
+++ b/frontend/themes/mytheme/styles.css
@@ -33,9 +33,37 @@
 	font-weight: bold;
 
 }
-
 .GameView {
 	display: grid;
+	grid-template-areas: "title gameRowList submit"
+						 "empty keyboard temp"; 
 	grid-template-columns: 1fr 2fr 1fr;
-	grid-template-rows: 1fr 5fr;
+	grid-template-rows: 2fr 1fr;
+}
+
+.KeyboardDisplay{
+	grid-area: keyboard;
+	display: grid;
+	
+}
+
+.KeyBoardButton{
+	width: 4VW;
+	height: 6VW;
+	font-size: 2VW;
+	text-align: center;
+    color: black;
+	
+}
+
+.GameRowList{
+	display: gameRowList;
+}
+
+.Title{
+	display: title;
+}
+
+.SubmitButton{
+	display: submit;
 }
