--- a/frontend/themes/mytheme/styles.css
+++ b/frontend/themes/mytheme/styles.css
@@ -98,3 +98,18 @@
 .SubmitButton{
 	display: submit;
 }
+
+.HomeLayout {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50vh; 
+}
+
+.LobbyLayout {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70vh; 
+}
